--- a/src/app/components/pontoColeta/home/home.component.html
+++ b/src/app/components/pontoColeta/home/home.component.html
@@ -1,1 +1,115 @@
-<p>home works!</p>
+<p-treetable [value]="files" [columns]="cols" [scrollable]="true" [tableStyle]="{ 'min-width': '50rem' }">
+
+  <ng-template #caption>
+    <div class="text-xl font-bold">Rotas Cadastradas</div>
+  </ng-template>
+
+  <ng-template #header let-columns>
+    <tr>
+      <th *ngFor="let col of columns">
+        {{ col.header }}
+      </th>
+      <th>Ações</th>
+    </tr>
+  </ng-template>
+
+  <ng-template #body let-rowNode let-rowData="rowData" let-columns="columns">
+    <tr [ttRow]="rowNode">
+      <td *ngFor="let col of columns; let i = index">
+        <p-treetable-toggler [rowNode]="rowNode" *ngIf="i === 0" />
+        {{ rowData[col.field] }}
+      </td>
+
+      <td>
+        <p-button
+          *ngIf="rowNode.level === 0"
+          icon="pi pi-pencil"
+          rounded="true"
+          severity="success"
+          [style]="{ 'margin-right': '.5em' }"
+          (click)="abrirEdicao(rowNode)">
+        </p-button>
+
+        <p-button
+          *ngIf="rowNode.level === 0"
+          icon="pi pi-trash"
+          rounded="true"
+          severity="danger"
+          (click)="deletar(rowNode.data?.id)">
+        </p-button>
+      </td>
+    </tr>
+  </ng-template>
+
+  <ng-template #summary>
+    <div style="text-align:left">
+      <p-button icon="pi pi-refresh" label="Atualizar" severity="warn" (click)="carregarTree()" />
+    </div>
+  </ng-template>
+
+</p-treetable>
+
+<p-dialog
+  header="Editar Rota"
+  [(visible)]="modalEditar"
+  [modal]="true"
+  [style]="{width: '70vw'}">
+
+  <h4>Caminhão</h4>
+  <p-select
+    [options]="caminhaoDisponiveis"
+    [(ngModel)]="caminhaoSelecionada"
+    [checkmark]="true"
+    optionLabel="placa"
+    [showClear]="true"
+    placeholder="Selecione o caminhão"
+    class="w-full md:w-56">
+
+    <ng-template pTemplate="item" let-caminhao>
+      {{ caminhao | json }}
+    </ng-template>
+    <!--
+    <ng-template pTemplate="item" let-caminhao>
+      {{ caminhao.placa }}
+    </ng-template>
+    !-->
+  </p-select>
+
+
+  <h4>Ruas</h4>
+  <p-pickList
+    [source]="ruasDisponiveis"
+    [target]="ruasSelecionadas"
+    sourceHeader="Disponíveis"
+    targetHeader="Selecionadas">
+
+    <ng-template pTemplate="item" let-rua>
+      Rua {{ rua.id }} -
+      {{ rua.origem?.nome }} → {{ rua.destino?.nome }}
+      ({{ rua.distanciaKm }} km)
+    </ng-template>
+
+  </p-pickList>
+
+  <h4>Tipos de Resíduos</h4>
+  <p-pickList
+    [source]="residuosDisponiveis"
+    [target]="residuosSelecionados"
+    sourceHeader="Disponíveis"
+    targetHeader="Selecionadas">
+
+    <ng-template pTemplate="item" let-residuo>
+      {{ residuo.tipo }}
+    </ng-template>
+  </p-pickList>
+
+  <div class="flex justify-content-end mt-4">
+    <p-button
+      label="Salvar"
+      icon="pi pi-check"
+      (click)="salvarEdicao()">
+    </p-button>
+  </div>
+
+</p-dialog>
+
