Fix: Consertando html, porem bug em certos lugares

--- a/src/app/components/pontoColeta/home/home.component.html
+++ b/src/app/components/pontoColeta/home/home.component.html
@@ -27,7 +27,7 @@
           rounded="true"
           severity="success"
           [style]="{ 'margin-right': '.5em' }"
-          (click)="atualizarRota(rowNode)">
+          (onClick)="atualizarRota(rowNode.node.data.id)">
         </p-button>
 
         <p-button
@@ -35,7 +35,7 @@
           icon="pi pi-trash"
           rounded="true"
           severity="danger"
-          (click)="deletar(rowNode.data?.id)">
+          (click)="deletar(rowNode.node.data.id)">
         </p-button>
       </td>
     </tr>
