Fix: Consertando rota e templateForm.scss

--- a/src/app/components/pontoColeta/ponto-coleta-form/ponto-coleta-form.html
+++ b/src/app/components/pontoColeta/ponto-coleta-form/ponto-coleta-form.html
@@ -1,46 +1,55 @@
 <p-toast></p-toast>
 
 <div class="form-container">
-  <p-card [header]="formAtualizar ? 'Atualizar' : 'Cadastrar'">
+  <p-card class="card-form">
 
-    <!-- NOME -->
-    <span class="p-float-label">
+    <ng-template pTemplate="header">
+      <div class="caption-container">
+
+        <span class="title-card">
+          {{ formAtualizar ? 'Atualizar' : 'Cadastrar' }}
+        </span>
+
+        <p-button
+          icon="pi pi-angle-left"
+          severity="success"
+          (onClick)="voltar()"
+          styleClass="btn-voltar">
+        </p-button>
+      </div>
+    </ng-template>
+
+    <span class="p-float-label field">
       <label>Nome</label>
       <input pInputText [(ngModel)]="pontoColeta.nome" />
     </span>
 
-    <!-- RESPONSÁVEL -->
-    <span class="p-float-label">
+    <span class="p-float-label field">
       <label>Responsável</label>
       <input pInputText [(ngModel)]="pontoColeta.responsavel" />
     </span>
 
-    <!-- TELEFONE -->
-    <span class="p-float-label">
+    <span class="p-float-label field">
       <label>Telefone</label>
       <input pInputText [(ngModel)]="pontoColeta.telefoneResponsavel" />
     </span>
 
-    <!-- EMAIL -->
-    <span class="p-float-label">
+    <span class="p-float-label field">
       <label>Email</label>
       <input pInputText [(ngModel)]="pontoColeta.emailResponsavel" />
     </span>
 
-    <!-- ENDEREÇO -->
-    <span class="p-float-label">
+    <span class="p-float-label field">
       <label>Endereço</label>
       <input pInputText [(ngModel)]="pontoColeta.endereco" />
     </span>
 
-    <!-- HORÁRIO -->
-    <span class="p-float-label">
+    <span class="p-float-label field">
       <label>Horário</label>
       <input pInputText [(ngModel)]="pontoColeta.horario" />
     </span>
 
-    <!-- BAIRRO -->
-    <span class="p-float-label">
+    <span class="p-float-label field">
       <label>Bairro</label>
       <p-select
         [options]="bairroDisponivel"
@@ -52,8 +61,7 @@
       </p-select>
     </span>
 
-    <!-- RESÍDUOS -->
-    <span class="p-float-label">
+    <span class="p-float-label field">
       <label>Resíduos</label>
       <p-multi-select
         [options]="residuoDisponivel"
@@ -66,12 +74,19 @@
     </span>
 
     <div class="button-group">
+
       <p-button
         [label]="formAtualizar ? 'Atualizar' : 'Cadastrar'"
-        (click)="formAtualizar ? atualizar() : cadastrar()">
+        (click)="formAtualizar ? atualizar() : cadastrar()"
+        styleClass="btn-principal">
       </p-button>
 
-      <p-button label="Voltar" (click)="voltar()"></p-button>
+      <p-button
+        label="Voltar"
+        (click)="voltar()"
+        styleClass="btn-secundario">
+      </p-button>
+
     </div>
 
   </p-card>
