--- a/src/app/components/rota/rota-table/rota-table.html
+++ b/src/app/components/rota/rota-table/rota-table.html
@@ -3,9 +3,16 @@
 <p-treetable [value]="files" [columns]="cols" [scrollable]="true" [tableStyle]="{ 'min-width': '50rem' }">
 
   <ng-template #caption>
-    <div class="text-xl font-bold">Rotas Cadastradas</div>
+    <div class="caption-container">
+      <span class="text-xl font-bold">Rotas Cadastradas</span>
+
+      <p-button
+        icon="pi pi-plus"
+        (onClick)="adicionar()">
+      </p-button>
+    </div>
   </ng-template>
-  S
+
   <ng-template #header let-columns>
     <tr>
       <th *ngFor="let col of columns">
