Feature: Caminhao Table e Form

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -17,4 +17,10 @@
     (onClick)="router.navigate(['pontoColeta'])"
     [disabled]="isAtPonto()">
   </p-button>
+
+  <p-button
+    label="Caminhão"
+    (onClick)="router.navigate(['caminhao'])"
+    [disabled]="isAtCaminhao()">
+  </p-button>
 </ng-container>
