Feature: Bairro Table e Form

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -23,4 +23,10 @@
     (onClick)="router.navigate(['caminhao'])"
     [disabled]="isAtCaminhao()">
   </p-button>
+
+  <p-button
+    label="Bairro"
+    (onClick)="router.navigate(['bairro'])"
+    [disabled]="isAtBairro()">
+  </p-button>
 </ng-container>
