Feature: Rua Table e Form

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -29,4 +29,10 @@
     (onClick)="router.navigate(['bairro'])"
     [disabled]="isAtBairro()">
   </p-button>
+
+  <p-button
+    label="Rua"
+    (onClick)="router.navigate(['rua'])"
+    [disabled]="isAtRua()">
+  </p-button>
 </ng-container>
