Fix: Varias correções e qualidades de vida

--- a/src/app/components/bairro/bairro-table/bairro-table.html
+++ b/src/app/components/bairro/bairro-table/bairro-table.html
@@ -1,48 +1,41 @@
 <p-toast></p-toast>
 
-<p-table [value]="bairro" [tableStyle]="{ 'min-width': '50rem' }">
-  <ng-template pTemplate="caption">
-    <div class="caption-container">
-      <span class="text-xl font-bold">Bairros Cadastrados</span>
+<div class="caption-container">
+  <span class="text-xl font-bold">Bairros</span>
+</div>
 
-      <p-button
-        icon="pi pi-plus"
-        (onClick)="adicionar()">
-      </p-button>
-    </div>
+<p-menubar [model]="menuItems">
+
+  <ng-template #item let-item>
+    <a pRipple class="flex items-center p-menubar-item-link" [class.p-disabled]="item.disabled">
+      <span>{{ item.label }}</span>
+    </a>
   </ng-template>
+
+</p-menubar>
+
+<p-table
+  [value]="bairro"
+  selectionMode="single"
+  [(selection)]="selectedNode"
+  (selectionChange)="onSelectionChange()"
+  [scrollable]="true"
+  [tableStyle]="{ 'min-width': '50rem' }">
 
   <ng-template #header>
     <tr>
       <th>Nome</th>
-      <th>Ações</th>
-
     </tr>
   </ng-template>
+
   <ng-template #body let-bairro>
-    <tr>
+    <tr [pSelectableRow]="bairro">
       <td>{{ bairro.nome }}</td>
-      <td>
-        <p-button
-          icon="pi pi-pencil"
-          rounded="true"
-          severity="success"
-          (click)="atualizar(bairro.id)">
-        </p-button>
-
-        <p-button
-          icon="pi pi-trash"
-          rounded="true"
-          severity="danger"
-          (click)="deletar(bairro.id)">
-        </p-button>
-      </td>
     </tr>
   </ng-template>
 
-  <!-- SUMMARY -->
-  <ng-template pTemplate="summary">
-    <div style="text-align:left">
+  <ng-template #summary>
+    <div class="summary-table">
       <p-button
         icon="pi pi-refresh"
         label="Atualizar"
@@ -51,4 +44,5 @@
       </p-button>
     </div>
   </ng-template>
+
 </p-table>
