--- a/src/app/components/usuario/login/login.component.html
+++ b/src/app/components/usuario/login/login.component.html
@@ -4,14 +4,14 @@
   <p-card header="Login">
     <div>
 
-      <span class="p-float-label">
+      <span class="p-float-label field">
         <label for="email">E-mail</label>
         <div>
             <input id="email" type="text" pInputText [(ngModel)]="usuario.email" />
         </div>
       </span>
 
-      <span class="p-float-label">
+      <span class="p-float-label field">
         <label for="senha">Senha</label>
         <div>
             <input id="senha" type="password" pInputText [(ngModel)]="usuario.senha" />
