--- a/src/app/components/itinerario/itinerario-table/itinerario-table.html
+++ b/src/app/components/itinerario/itinerario-table/itinerario-table.html
@@ -1,56 +1,56 @@
-<p-treetable [value]="files" [columns]="cols" [scrollable]="true" [tableStyle]="{ 'min-width': '50rem' }">
+<p-toast></p-toast>
 
-  <ng-template #caption>
-    <div class="caption-container">
-      <span class="text-xl font-bold">Itinerario Cadastradas</span>
+<div class="caption-container">
+  <span class="text-xl font-bold">Itinerario</span>
+</div>
 
-      <p-button
-        icon="pi pi-plus"
-        (onClick)="adicionar()">
-      </p-button>
-    </div>
+<p-menubar [model]="menuItems">
+
+  <ng-template #item let-item>
+    <a pRipple class="flex items-center p-menubar-item-link" [class.p-disabled]="item.disabled">
+      <span>{{ item.label }}</span>
+    </a>
   </ng-template>
+
+</p-menubar>
+
+<p-treetable
+  [value]="files"
+  [columns]="cols"
+  selectionMode="single"
+  [(selection)]="selectedNode"
+  (selectionChange)="onSelectionChange()"
+  [scrollable]="true"
+  [tableStyle]="{ 'min-width': '50rem' }">
 
   <ng-template #header let-columns>
     <tr>
       <th *ngFor="let col of columns">
         {{ col.header }}
       </th>
-      <th>Ações</th>
     </tr>
   </ng-template>
 
   <ng-template #body let-rowNode let-rowData="rowData" let-columns="columns">
-    <tr [ttRow]="rowNode">
+    <tr
+      [ttRow]="rowNode"
+      [ttSelectableRow]="rowNode">
+
       <td *ngFor="let col of columns; let i = index">
         <p-treetable-toggler [rowNode]="rowNode" *ngIf="i === 0" />
         {{ rowData[col.field] }}
-      </td>
-
-      <td>
-        <p-button
-          *ngIf="rowNode.level === 0"
-          icon="pi pi-pencil"
-          rounded="true"
-          severity="success"
-          [style]="{ 'margin-right': '.5em' }"
-          (onClick)="atualizar(rowNode.node.data.id)">
-        </p-button>
-
-        <p-button
-          *ngIf="rowNode.level === 0"
-          icon="pi pi-trash"
-          rounded="true"
-          severity="danger"
-          (click)="deletar(rowNode.node.data.id)">
-        </p-button>
       </td>
     </tr>
   </ng-template>
 
   <ng-template #summary>
     <div style="text-align:left">
-      <p-button icon="pi pi-refresh" label="Atualizar" severity="warn" (click)="carregarTree()" />
+      <p-button
+        icon="pi pi-refresh"
+        label="Atualizar"
+        severity="warn"
+        (click)="carregarTree()">
+      </p-button>
     </div>
   </ng-template>
 
