--- a/src/app/components/itinerario/itinerario-table/itinerario-table.html
+++ b/src/app/components/itinerario/itinerario-table/itinerario-table.html
@@ -7,7 +7,9 @@
 <p-menubar [model]="menuItems">
 
   <ng-template #item let-item>
-    <a pRipple class="flex items-center p-menubar-item-link" [class.p-disabled]="item.disabled">
+    <a pRipple class="flex items-center p-menubar-item-link"
+       [class.p-disabled]="item.disabled"
+       (click)="!item.disabled && item.command?.()">
       <span>{{ item.label }}</span>
     </a>
   </ng-template>
