Fix: Botão de atualizar alinhado a esquerda

--- a/src/app/components/rua/rua-table/rua-table.html
+++ b/src/app/components/rua/rua-table/rua-table.html
@@ -43,7 +43,7 @@
 
   <!-- SUMMARY -->
   <ng-template pTemplate="summary">
-    <div style="text-align:left">
+    <div  class="summary-table">
       <p-button
         icon="pi pi-refresh"
         label="Atualizar"
