--- a/src/app/components/residuo/residuo-table/residuo-table.html
+++ b/src/app/components/residuo/residuo-table/residuo-table.html
@@ -37,7 +37,7 @@
 
   <!-- SUMMARY -->
   <ng-template pTemplate="summary">
-    <div style="text-align:left">
+    <div  class="summary-table">
       <p-button
         icon="pi pi-refresh"
         label="Atualizar"
